# template-rust

./: .conform.yaml  .gitignore  .gitmodules  README.md  rules.yaml
goldenmaster/: Cargo.toml  rustfmt.toml
goldenmaster/examples/: Cargo.toml
goldenmaster/examples/src/: main.rs
goldenmaster/tb_enum/: Cargo.toml
goldenmaster/tb_enum/tests/: implementation_enum_interface_test.rs  olink_enum_interface_test.rs
goldenmaster/tb_names/: Cargo.toml
goldenmaster/tb_names/src/: lib.rs
goldenmaster/tb_names/tests/: implementation_nam_es_test.rs  olink_nam_es_test.rs
goldenmaster/tb_same1/: Cargo.toml
goldenmaster/tb_same1/tests/: implementation_same_enum1_interface_test.rs  implementation_same_enum2_interface_test.rs  implementation_same_struct1_interface_test.rs  implementation_same_struct2_interface_test.rs  olink_same_enum1_interface_test.rs  olink_same_enum2_interface_test.rs  olink_same_struct1_interface_test.rs  olink_same_struct2_interface_test.rs
goldenmaster/tb_same2/: Cargo.toml
goldenmaster/tb_same2/tests/: implementation_same_enum1_interface_test.rs  implementation_same_enum2_interface_test.rs  implementation_same_struct1_interface_test.rs  implementation_same_struct2_interface_test.rs  olink_common.rs  olink_same_enum1_interface_test.rs  olink_same_enum2_interface_test.rs  olink_same_struct1_interface_test.rs  olink_same_struct2_interface_test.rs
goldenmaster/tb_simple/: Cargo.toml
goldenmaster/tb_simple/tests/: implementation_empty_interface_test.rs  (+13 more)
goldenmaster/testbed1/: Cargo.toml
goldenmaster/testbed2/: Cargo.toml
(+320 files in other folders)
